<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:elevation="2dp"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_final_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="start"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="72sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="$0.00" />

        <Button
            android:id="@+id/btn_num1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_keyboard"
            android:layout_marginTop="50dp"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/label_num1"
            app:layout_constraintBottom_toTopOf="@+id/btn_num4"
            app:layout_constraintEnd_toStartOf="@+id/btn_num2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_final_input" />

        <Button
            android:id="@+id/btn_num2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/label_num2"
            app:layout_constraintBottom_toTopOf="@+id/btn_num5"
            app:layout_constraintEnd_toStartOf="@+id/btn_num3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_num1"
            app:layout_constraintTop_toBottomOf="@+id/text_final_input" />

        <Button
            android:id="@+id/btn_num3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="@dimen/margin_keyboard"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/label_num3"
            app:layout_constraintBottom_toTopOf="@+id/btn_num6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_num2"
            app:layout_constraintTop_toBottomOf="@+id/text_final_input" />

        <Button
            android:id="@+id/btn_num4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_keyboard"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/label_num4"
            app:layout_constraintBottom_toTopOf="@+id/btn_num7"
            app:layout_constraintEnd_toStartOf="@+id/btn_num5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_num1" />

        <Button
            android:id="@+id/btn_num5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/label_num5"
            app:layout_constraintBottom_toTopOf="@+id/btn_num8"
            app:layout_constraintEnd_toStartOf="@+id/btn_num6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_num4"
            app:layout_constraintTop_toBottomOf="@+id/btn_num2" />

        <Button
            android:id="@+id/btn_num6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_keyboard"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/label_num6"
            app:layout_constraintBottom_toTopOf="@+id/btn_num9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_num5"
            app:layout_constraintTop_toBottomOf="@+id/btn_num3" />

        <Button
            android:id="@+id/btn_num7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_keyboard"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/label_num7"
            app:layout_constraintBottom_toTopOf="@+id/btn_num0"
            app:layout_constraintEnd_toStartOf="@+id/btn_num8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_num4" />

        <Button
            android:id="@+id/btn_num8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/label_num8"
            app:layout_constraintBottom_toTopOf="@+id/btn_num0"
            app:layout_constraintEnd_toStartOf="@+id/btn_num9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_num7"
            app:layout_constraintTop_toBottomOf="@+id/btn_num5" />

        <Button
            android:id="@+id/btn_num9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_keyboard"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/label_num9"
            app:layout_constraintBottom_toTopOf="@+id/btn_num0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_num8"
            app:layout_constraintTop_toBottomOf="@+id/btn_num6" />

        <Button
            android:id="@+id/btn_del"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_keyboard"
            android:layout_marginBottom="40dp"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/label_delete"
            android:textColor="@color/colorDanger"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_num0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_num7" />

        <Button
            android:id="@+id/btn_num0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="40dp"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/label_num0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_next"
            app:layout_constraintStart_toEndOf="@+id/btn_del"
            app:layout_constraintTop_toBottomOf="@+id/btn_num8" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_keyboard"
            android:layout_marginBottom="40dp"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/label_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_num8"
            app:layout_constraintTop_toBottomOf="@+id/btn_num9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>